kube/graveyard/kube-prometheus-stack/network.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: obs
  labels:
    app.kubernetes.io/name: grafana
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    #nginx.ingress.kubernetes.io/auth-url: "https://sso.matthew-stratton.me/oauth2/auth"
    #nginx.ingress.kubernetes.io/auth-signin: "https://sso.matthew-stratton.me/oauth2/start"
    #nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, x-auth-request-access-token"
    #nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - grafana.matthew-stratton.me
    secretName: grafana-tls
  rules:
  - host: grafana.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: kps-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: obs
  labels:
    app.kubernetes.io/name: prometheus
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    #nginx.ingress.kubernetes.io/auth-url: "https://sso.matthew-stratton.me/oauth2/auth"
    #nginx.ingress.kubernetes.io/auth-signin: "https://sso.matthew-stratton.me/oauth2/start"
    #nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, x-auth-request-access-token"
    #nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - prometheus.matthew-stratton.me
    secretName: prometheus-tls
  rules:
  - host: prometheus.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: kps-kube-prometheus-stack-prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
